# AdvancedPython

./: README.md  pyproject.toml
hw_1/: nl.py  tail.py  wc.py
hw_1/artifacts/: task1  task2  task3
hw_1/test_files/: file with spaces.txt  file@with#special.txt  iso8859_file.txt  long_line.txt  simple_test  single_line.txt  special_chars.txt  utf8_file.txt
hw_1/tests/: test_nl.txt  test_tail.txt  test_wc.txt
hw_2/: docker-compose.yml  requirements.txt  task_1_2.py
hw_2/artifacts/: table_image.tex
hw_3/: task1.py  task2.py  task3.py
hw_3/artifacts/task2/: matrix*.txt  matrix+.txt  matrix-.txt  matrix@.txt  matrix_div.txt
hw_3/artifacts/task3/: A.txt  AB.txt  C.txt  CD.txt
hw_5/task1/: task1.py
hw_5/task2/: realty_data.json  task2.py
